scss/main.css
/* ... */
@media screen and (max-width: 515px) {
  .nav--open {
    width: 100%;
  }
  #hero-video-mobile {
    display: block;
  }
  #hero-video {
    display: none;
  }
  #video-btn {
    display: none;
  }
  #play-btn-mobile {
    display: block;
    position: absolute;
    top: 40%;
    left: 40%;
    border: 0;
    background: none;
    color: #fafafa;
    font-size: 3rem;
    opacity: 0.5;
    z-index: 5;
  }
  #play-btn-mobile:hover {
    opacity: 1;
    transition: all 0.3s ease;
  }
  .ticker p {
    font-size: 1.3rem;
    margin: 0.3rem 0 0rem 0;
  }
  .work-title-mobile {
    padding-right: 5%;
  }
  .work-grid {
    display: flex;
    flex-direction: column;
  }
  .home-work-img-desktop {
    display: none;
  }
  .home-work-img-mobile {
    display: block;
    border-radius: 30px;
  }
  .about-hero-text {
    width: 90%;
  }
  .about-ceo-container {
    width: 90%;
  }
  .coop-grid {
    width: 90vw;
  }
  .work-item-3 {
    padding-left: 0;
    margin: 0 5%;
    order: 3;
  }
  .work-item-1, .work-item-4 {
    padding-right: 0;
    margin: 0 5%;
  }
  .work-orange-lines {
    display: none;
  }
  .clients-blue-lines {
    width: 40%;
    top: -15px;
  }
  .services-grid {
    grid-template-columns: 1fr;
    grid-row-gap: 2rem;
    padding: 8%;
    width: auto;
  }
  .services-grid-item {
    padding: 1.5rem;
  }
  .dh-hero-container {
    padding-top: 30%;
  }
  .dh-hero-body {
    width: 55%;
  }
  p {
    font-size: 1rem;
    line-height: 1.6rem;
  }
  .dh-hero-badge {
    width: 70px;
    margin-right: -10px;
    margin-left: 20px;
  }
  .dh-results-container .services-grid {
    padding: 0 20%;
  }
  .dh-services-grid {
    display: block;
  }
  .dh-services-item {
    margin-bottom: 2rem;
  }
  .dh-services-item-img {
    max-height: unset;
  }
  .dh-services-podcast-video iframe {
    height: 220px;
  }
  .dh-short-award-video iframe {
    height: 220px;
  }
  .dh-shorty-award img {
    max-width: 150px;
  }
  .meta-hero-image {
    padding-top: 40%;
  }
  .meta-hero-img {
    max-height: 500px;
  }
  .meta-creative-grid {
    grid-template-columns: 1fr;
    padding: 0 15%;
    grid-gap: 2rem;
  }
  .meta-creative-title {
    text-align: center;
  }
  .meta-education-container .meta-creative-title h1 {
    width: auto;
  }
  .meta-creative-desc, .meta-production-desc {
    margin: 0 5%;
    padding: 1rem;
  }
  .ch-hero-image {
    padding-top: 65%;
  }
  .ch-results-container .services-grid {
    grid-template-columns: 1fr;
    padding: 0 15%;
  }
  .ch-content-container .meta-creative-title {
    text-align: left;
  }
  #footer {
    display: block;
    width: 100vw;
    height: auto;
    padding: 5% 0;
  }
  .footer-careers, .footer-address, .footer-social {
    justify-content: center;
    padding: 0;
    margin: 0;
    height: 50px;
  }
}
@media screen and (max-width: 435px) {
  .dh-hero-container {
    padding-top: 45%;
  }
  .dh-services-grid {
    padding: 0 15%;
  }
  .ch-hero-image {
    padding-top: 75%;
  }
  .dh-services-title h1 {
    margin-top: 10%;
  }
  .meta-hero-image {
    padding-top: 55%;
  }
}
@media screen and (max-width: 400px) {
  .dh-hero-container {
    padding-top: 55%;
  }
  .dh-hero-body {
    width: 60%;
  }
  .ch-hero-image {
    padding-top: 85%;
  }
}/*# sourceMappingURL=main.css.map */

